[tool.poetry]
name = "flask-pypprof"
version = "v0.1.12"
description = "Pypprof Flask wrapper"
authors = ["Diego <diegolparra@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_pypprof"}]

[tool.poetry.dependencies]
python = ">3.8"
zprofile = "1.0.12"
protobuf = "^3.20"
mprofile = "0.0.15"
pypprof = "0.0.1"
flask = "^2.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
flask_restful = "^0.3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
