[tool.poetry]
name = "flask-pypprof"
version = "v0.1.15"
description = "Pypprof Flask wrapper"
authors = ["Diego <diegolparra@gmail.com>"]
readme = "README.md"
packages = [{ include = "flask_pypprof" }]

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
flask = "^2.1.3"

zprofile = { version = "1.0.12", platform = "linux" }
protobuf = { version = "^3.20", platform = "linux" }
mprofile = { version = "0.0.15", platform = "linux" }
pypprof = { version = "0.0.1", platform = "linux" }

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
flask_restful = "^0.3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
